{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 7,
  "lineage": "048e6cec-9f04-2458-4cee-0277587b2ec2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ninja_n8n",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03d9fcc39480315d4",
            "arn": "arn:aws:ec2:us-east-2:770893956717:instance/i-09b300bb57e7fa1fc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ninja-n8n-ssm-20250926114123908100000002",
            "id": "i-09b300bb57e7fa1fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01c9be90333dbf24f",
            "private_dns": "ip-10-1-20-183.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.20.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-018c67a1380ce180e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03265512a856c2047",
            "tags": {
              "Name": "ninja-n8n"
            },
            "tags_all": {
              "Name": "ninja-n8n"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05275eb2daa27c8b9"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_iam_role_policy_attachment.ssm_core",
            "aws_security_group.ninja_n8n"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ninja_n8n",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:770893956717:security-group/sg-05275eb2daa27c8b9",
            "description": "Security group for ninja-n8n",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05275eb2daa27c8b9",
            "ingress": [],
            "name": "ninja-n8n-sg",
            "name_prefix": "",
            "owner_id": "770893956717",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ninja-n8n-sg"
            },
            "tags_all": {
              "Name": "ninja-n8n-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2ed1981d9864fd2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_5678_from_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow TCP 5678 from SG sg-0cca93afa1f441d41",
            "from_port": 5678,
            "id": "sgrule-2571598304",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05275eb2daa27c8b9",
            "security_group_rule_id": "sgr-0424d8ee3e4ac1f43",
            "self": false,
            "source_security_group_id": "sg-0cca93afa1f441d41",
            "timeouts": null,
            "to_port": 5678,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.ninja_n8n"
          ]
        }
      ]
    }
  ]
}